--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_URL", '"https://dl.dropboxusercontent.com/s/2iodh4vg0eortkl/"'
     }
     buildTypes {
         release {
@@ -42,6 +43,6 @@ dependencies {
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
 }
