--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URL", '"https://dl.dropboxusercontent.com/s/2iodh4vg0eortkl/"'
     }
+    dataBinding {
+        enabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -46,4 +49,15 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //SwipeRefresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    //Dimensions
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //Card View
+    implementation "androidx.cardview:cardview:1.0.0"
+
+
 }
